// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Collapse Group should be no errors when children are missing 1`] = `ReactWrapper {}`;

exports[`Collapse Group should render correctly 1`] = `ReactWrapper {}`;

exports[`Collapse Group should work with bordered 1`] = `
LoadedCheerio {
  "0": <div
    class="nextui-c-dWWWSv nextui-c-dWWWSv-eaqZHc-borderWeight-light nextui-c-dWWWSv-jXueSE-bordered-true"
  >
    <div
      class="nextui-c-hPzDAx nextui-c-huiNHE nextui-c-hPzDAx-eLdNZT-borderWeight-light nextui-c-hPzDAx-jBQhgJ-divider-true nextui-c-hPzDAx-kMkCGX-animated-true nextui-c-hPzDAx-TDdeu-visible-false nextui-collapse nextui-collapse--closed"
      data-state="closed"
      tabindex="-1"
    >
      <div
<<<<<<< HEAD
        aria-controls="react-aria5082782828-10"
=======
        aria-controls="react-aria3708293044-10"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
        aria-disabled="false"
        aria-expanded="false"
        class="nextui-c-lfcDHB nextui-c-PJLV nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-collapse-view"
        data-state="closed"
<<<<<<< HEAD
        id="react-aria5082782828-9"
=======
        id="react-aria3708293044-9"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
        role="button"
        tabindex="0"
      >
        <div
          class="nextui-collapse-title-container"
        >
          <div
            class="nextui-collapse-title-content"
          >
            <h3
              class="nextui-collapse-title"
            >
              title1
            </h3>
          </div>
          <div
            class="nextui-collapse-title-content-right"
          >
            <svg
              class="nextui-c-fUXRSc nextui-collapse-icon"
              fill="none"
              focusable="false"
              height="20"
              role="presentation"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="nextui-c-dJMBOt nextui-c-dJMBOt-ielLSBX-css"
      >
        <div
          class="nextui-expand-content"
        >
          <div
<<<<<<< HEAD
            aria-labelledby="react-aria5082782828-9"
            class="nextui-c-fMAxGR nextui-collapse-content"
            id="react-aria5082782828-10"
=======
            aria-labelledby="react-aria3708293044-9"
            class="nextui-c-fMAxGR nextui-collapse-content"
            id="react-aria3708293044-10"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
            role="region"
            tabindex="-1"
          >
            content1
          </div>
        </div>
      </div>
    </div>
    <div
      class="nextui-c-hPzDAx nextui-c-huiNHE nextui-c-hPzDAx-eLdNZT-borderWeight-light nextui-c-hPzDAx-jBQhgJ-divider-true nextui-c-hPzDAx-kMkCGX-animated-true nextui-c-hPzDAx-TDdeu-visible-false nextui-collapse nextui-collapse--closed"
      data-state="closed"
      tabindex="-1"
    >
      <div
<<<<<<< HEAD
        aria-controls="react-aria5082782828-12"
=======
        aria-controls="react-aria3708293044-12"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
        aria-disabled="false"
        aria-expanded="false"
        class="nextui-c-lfcDHB nextui-c-PJLV nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-collapse-view"
        data-state="closed"
<<<<<<< HEAD
        id="react-aria5082782828-11"
=======
        id="react-aria3708293044-11"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
        role="button"
        tabindex="0"
      >
        <div
          class="nextui-collapse-title-container"
        >
          <div
            class="nextui-collapse-title-content"
          >
            <h3
              class="nextui-collapse-title"
            >
              title2
            </h3>
          </div>
          <div
            class="nextui-collapse-title-content-right"
          >
            <svg
              class="nextui-c-fUXRSc nextui-collapse-icon"
              fill="none"
              focusable="false"
              height="20"
              role="presentation"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="nextui-c-dJMBOt nextui-c-dJMBOt-ielLSBX-css"
      >
        <div
          class="nextui-expand-content"
        >
          <div
<<<<<<< HEAD
            aria-labelledby="react-aria5082782828-11"
            class="nextui-c-fMAxGR nextui-collapse-content"
            id="react-aria5082782828-12"
=======
            aria-labelledby="react-aria3708293044-11"
            class="nextui-c-fMAxGR nextui-collapse-content"
            id="react-aria3708293044-12"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
            role="region"
            tabindex="-1"
          >
            content2
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;

exports[`Collapse Group should work without accordion 1`] = `
LoadedCheerio {
  "0": <div
    class="nextui-c-dWWWSv nextui-c-dWWWSv-eaqZHc-borderWeight-light"
  >
    <div
      class="nextui-c-hPzDAx nextui-c-huiNHE nextui-c-hPzDAx-eLdNZT-borderWeight-light nextui-c-hPzDAx-jBQhgJ-divider-true nextui-c-hPzDAx-kMkCGX-animated-true nextui-c-hPzDAx-TDdeu-visible-false nextui-collapse nextui-collapse--closed"
      data-state="closed"
      tabindex="-1"
    >
      <div
<<<<<<< HEAD
        aria-controls="react-aria5082782828-6"
=======
        aria-controls="react-aria3708293044-6"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
        aria-disabled="false"
        aria-expanded="false"
        class="nextui-c-lfcDHB nextui-c-PJLV nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-collapse-view"
        data-state="closed"
<<<<<<< HEAD
        id="react-aria5082782828-5"
=======
        id="react-aria3708293044-5"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
        role="button"
        tabindex="0"
      >
        <div
          class="nextui-collapse-title-container"
        >
          <div
            class="nextui-collapse-title-content"
          >
            <h3
              class="nextui-collapse-title"
            >
              title1
            </h3>
          </div>
          <div
            class="nextui-collapse-title-content-right"
          >
            <svg
              class="nextui-c-fUXRSc nextui-collapse-icon"
              fill="none"
              focusable="false"
              height="20"
              role="presentation"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="nextui-c-dJMBOt nextui-c-dJMBOt-ielLSBX-css"
      >
        <div
          class="nextui-expand-content"
        >
          <div
<<<<<<< HEAD
            aria-labelledby="react-aria5082782828-5"
            class="nextui-c-fMAxGR nextui-collapse-content"
            id="react-aria5082782828-6"
=======
            aria-labelledby="react-aria3708293044-5"
            class="nextui-c-fMAxGR nextui-collapse-content"
            id="react-aria3708293044-6"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
            role="region"
            tabindex="-1"
          >
            content1
          </div>
        </div>
      </div>
    </div>
    <div
      class="nextui-c-hPzDAx nextui-c-huiNHE nextui-c-hPzDAx-eLdNZT-borderWeight-light nextui-c-hPzDAx-jBQhgJ-divider-true nextui-c-hPzDAx-kMkCGX-animated-true nextui-c-hPzDAx-TDdeu-visible-false nextui-collapse nextui-collapse--closed"
      data-state="closed"
      tabindex="-1"
    >
      <div
<<<<<<< HEAD
        aria-controls="react-aria5082782828-8"
=======
        aria-controls="react-aria3708293044-8"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
        aria-disabled="false"
        aria-expanded="false"
        class="nextui-c-lfcDHB nextui-c-PJLV nextui-c-PJLV-gulvcB-isFocusVisible-false nextui-collapse-view"
        data-state="closed"
<<<<<<< HEAD
        id="react-aria5082782828-7"
=======
        id="react-aria3708293044-7"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
        role="button"
        tabindex="0"
      >
        <div
          class="nextui-collapse-title-container"
        >
          <div
            class="nextui-collapse-title-content"
          >
            <h3
              class="nextui-collapse-title"
            >
              title2
            </h3>
          </div>
          <div
            class="nextui-collapse-title-content-right"
          >
            <svg
              class="nextui-c-fUXRSc nextui-collapse-icon"
              fill="none"
              focusable="false"
              height="20"
              role="presentation"
              viewBox="0 0 24 24"
              width="20"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M15.5 19l-7-7 7-7"
                stroke-linecap="round"
                stroke-linejoin="round"
                stroke-width="1.5"
              />
            </svg>
          </div>
        </div>
      </div>
      <div
        class="nextui-c-dJMBOt nextui-c-dJMBOt-ielLSBX-css"
      >
        <div
          class="nextui-expand-content"
        >
          <div
<<<<<<< HEAD
            aria-labelledby="react-aria5082782828-7"
            class="nextui-c-fMAxGR nextui-collapse-content"
            id="react-aria5082782828-8"
=======
            aria-labelledby="react-aria3708293044-7"
            class="nextui-c-fMAxGR nextui-collapse-content"
            id="react-aria3708293044-8"
>>>>>>> ae48289ee7c250d0bd2adcd295ec7e4a358a92e0
            role="region"
            tabindex="-1"
          >
            content2
          </div>
        </div>
      </div>
    </div>
  </div>,
  "_root": LoadedCheerio {
    "0": Document {
      "children": Array [
        <html>
          <head />
          <body />
        </html>,
      ],
      "endIndex": null,
      "next": null,
      "parent": null,
      "prev": null,
      "startIndex": null,
      "type": "root",
      "x-mode": "quirks",
    },
    "_root": [Circular],
    "length": 1,
    "options": Object {
      "decodeEntities": true,
      "xml": false,
    },
  },
  "length": 1,
  "options": Object {
    "decodeEntities": true,
    "xml": false,
  },
}
`;
